Update Assignment 5- 2D Arrays.ipynb

--- a/Assignment 5-2D Arrays.ipynb
+++ b/Assignment 5-2D Arrays.ipynb
@@ -491,7 +491,7 @@
     }
    ],
    "source": [
-    "from collection import Counter\n",
+    "from collections import Counter\n",
     "def findOriginalArray(changed):\n",
     "    n = len(changed)\n",
     "    if n % 2:\n",
