Update Assignment 16- Stacks.ipynb

--- a/Assignment 16- Stacks.ipynb
+++ b/Assignment 16- Stacks.ipynb
@@ -5,7 +5,7 @@
    "id": "9acfa145-f22d-4e27-a266-8ab23f1cdca9",
    "metadata": {},
    "source": [
-    "# Assignment 16 Questions - Linked List | DSA"
+    "# Assignment 16 Questions - Stacks | DSA"
    ]
   },
   {
