--- a/Assignment 15- Stacks.ipynb
+++ b/Assignment 15- Stacks.ipynb
@@ -5,7 +5,7 @@
    "id": "a2ae17e5-bfae-48f8-80f4-08a6877f3065",
    "metadata": {},
    "source": [
-    "# Assignment 15 Questions - Linked List | DSA"
+    "# Assignment 15 Questions - Stacks | DSA"
    ]
   },
   {
